# DeepEmotion

./: .gitignore  .gitmodules  README.md  annotate.py  main.py  preprocess.py  pyproject.toml  setup.py  train.py
.github/: pull_request_template.md
annotations/: classification.tsv  classification_clustered.tsv  classification_clustered_thresh4.tsv  classification_majority.tsv  regression.tsv
configs/: PCA.yaml  base.yaml
data/raw/: .gitignore  .gitmodules  LICENSE  README.md  datacite.yml
data/resampled_annotations/: av1o1_resampled.tsv  av1o2_resampled.tsv  av1o3_resampled.tsv  av1o4_resampled.tsv  av1o5_resampled.tsv  av1o6_resampled.tsv  av1o7_resampled.tsv  av1o8_resampled.tsv  av1o9_resampled.tsv  emotion_audio_only.tsv  emotions_audio_visual.tsv  emotions_av_1s_events.tsv  emotions_av_1s_events_run-1_events.tsv  emotions_av_1s_events_run-2_events.tsv
data/touch/: obs1_expanded.tsv  obs2_expanded.tsv  obs3_expanded.tsv  obs4_expanded.tsv  obs5_expanded.tsv  (+3 more)
grad-cam/: generate_solids.py  gradcam.py  main.py  solids_dataset.py  train.py  utils.py
notebooks/: PCA.ipynb  touch.ipynb
scripts/: conv2zarr.py  generate_test_data.py  get_nii_gz_shape.py  pool_emotions.py  resample_agg_annotations.py  resample_raw_annotations.py
src/: PCA.py  annotations_regenerator.py  annotations_regenrator.py  cluster_annotations.py  conv2zarr.py  create_HDF5.py  gradcam.py  med_cam.py  med_cam_fixer.py  post_analysis.ipynb  train vgg.py  train.py  train_contrastive.py  train_fewshot.py  train_gradcam.py  train_with_masks.ipynb  traini3d.py  visualize_pca.py
(+262 files in other folders)
